[Task Scheduler] Allow the ChromeOSMetricsProvider to wait.

The InitTaskGetHardwareClassOnBackgroundThread() code calls into
StatisticsProvider::GetMachineStatistic(), which calls
WaitForStatisticsLoaded(), which uses a WaitableEvent.

Bug: 743056
Change-Id: I3da6e975b1d774f963ca4cdb9242878357bd2b78
Reviewed-on: https://chromium-review.googlesource.com/572740
Reviewed-by: Alexei Svitkine (slow) <asvitkine@chromium.org>
Commit-Queue: Alexei Svitkine (slow) <asvitkine@chromium.org>
Cr-Commit-Position: refs/heads/master@{#488378}