chrome/browser/metrics/chromeos_metrics_provider.cc
@@ -174,7 +174,8 @@ void ChromeOSMetricsProvider::InitTaskGetHardwareClass(
   // the UI thread.
   base::PostTaskWithTraitsAndReply(
       FROM_HERE,
-      {base::MayBlock(), base::TaskPriority::BACKGROUND,
+      {base::MayBlock(), base::WithBaseSyncPrimitives(),
+       base::TaskPriority::BACKGROUND,
        base::TaskShutdownBehavior::SKIP_ON_SHUTDOWN},
       base::BindOnce(
           &ChromeOSMetricsProvider::InitTaskGetHardwareClassOnBackgroundThread,
